# cc-fetcher

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cleaner  README.md  docker-compose.yml  pyproject.toml  seccomp-fetcher.json
.github/workflows/: ci.yml  fetch.yml
config/: sources.dev.yaml  sources.prod.yaml  sources.staging.yaml
docs/: design.md
scripts/: cdr_cleaner.py  secure_fetch.sh  validate_output.py
src/fetcher/: __init__.py  cli.py  config.py  http.py  models.py  output.py
src/fetcher/sources/: __init__.py  _registry.py  caixin_scraper.py  chinese_news.py  global_affairs.py  mfa.py  mofcom.py  news_scraper.py  parliament.py  statcan.py  thepaper_scraper.py  xinhua.py  yahoo_finance.py
tests/: conftest.py  test_chinese_news.py  test_cli.py  test_global_affairs.py  test_http.py  test_mfa.py  test_models.py  test_mofcom.py  test_news_scraper.py  test_parliament.py  test_statcan.py  test_xinhua.py  test_yahoo_finance.py
tests/fixtures/: chinese_rss_feed.xml  global_affairs_response.json  mfa_page.html  mofcom_page.html  parliament_response.json  rss_feed.xml  statcan_response.json  xinhua_page.html  yahoo_finance_response.json
